Add second adsense unit

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@ layout: default
     </div>
 
     <a href="{{post.url | prepend: site.baseurl}}" class="button button-primary">Read More</a>
-    {% if forloop.index == 2 or forloop.index == 6 %}
+    {% if forloop.index == 2 %}
     {% include adsense.html %}
+    {% endif %}
+    {% if forloop.index == 6 %}
+    {% include adsense-2.html %}
     {% endif %}
   </article>
   {% endfor %}
